--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -12,7 +12,7 @@
     "import agents\n",
     "import helpers\n",
     "import config\n",
-    "from model import goose_model\n",
+    "import model\n",
     "from replay_buffer import ReplayBuffer"
    ]
   },
@@ -26,7 +26,7 @@
     "env.reset()\n",
     "\n",
     "trainer = env.train([None, agents.default_agent])\n",
-    "model = goose_model(config.num_actions)\n",
+    "model = model.goose_model(config.num_actions)\n",
     "memory = ReplayBuffer(size=config.buffer_size)"
    ]
   },
@@ -39,9 +39,10 @@
     "def env_step(iter_num):\n",
     "    random_step_chance = helpers.get_epsilon_for_iteration(iter_num)\n",
     "    if random.random() > random_step_chance:\n",
-    "        action = choose_best_action(model, curr_state)\n",
+    "        n_action = model.choose_best_action(model, curr_state)\n",
+    "        action = env.specification.action['enum'][n_action]\n",
     "    else:\n",
-    "        action = random.choice(['NORTH','SOUTH','EAST','WEST'])\n",
+    "        action = random.choice(env.specification.action['enum'])\n",
     "    \n",
     "    total_reward = 0\n",
     "    state = []\n",
@@ -74,13 +75,34 @@
     "        # check time for train\n",
     "        if len(memory) > config.min_frames_for_train:\n",
     "            curr_states, actions, rewards, next_states, is_terminals = memory.sample_batch(config.batch_size)\n",
-    "            fit_batch(model, target_model, curr_states, actions, rewards, next_states, is_terminals)\n",
+    "            model.fit_batch(model, target_model, curr_states, actions, rewards, next_states, is_terminals)\n",
     "        \n",
     "        # save target model\n",
     "        if i % config.save_target_model == 0:\n",
     "            model.save(f'{i}.h5')\n",
     "            target_model = load_model(f'{i}.h5')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5551,21 +5573,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'episodeSteps': {'description': 'Maximum number of steps in the episode.', 'type': 'integer', 'minimum': 1, 'default': 200}, 'actTimeout': {'description': 'Maximum runtime (seconds) to obtain an action from an agent.', 'type': 'number', 'minimum': 0, 'default': 1}, 'runTimeout': {'description': 'Maximum runtime (seconds) of an episode (not necessarily DONE).', 'type': 'number', 'minimum': 0, 'default': 1200}, 'columns': {'description': 'Horizontal number of cells on the board.', 'type': 'integer', 'default': 11, 'minimum': 3}, 'rows': {'description': 'Vertical number of cells on the board.', 'type': 'integer', 'default': 7, 'minimum': 3}, 'hunger_rate': {'description': 'The number of steps before the goose shrinks a cell.', 'type': 'integer', 'minimum': 1, 'default': 40}, 'min_food': {'description': 'The minimum amount of food present for all steps.', 'type': 'integer', 'default': 2, 'minimum': 1}, 'max_length': {'description': 'The max length any goose can be. Total reward = (max length + 1) * steps survived + goose length.', 'type': 'integer', 'default': 99}}\n"
+      "['NORTH', 'EAST', 'SOUTH', 'WEST']\n"
      ]
     }
    ],
    "source": [
     "# print(env.specification.observation)\n",
-    "print(env.specification.configuration)\n",
-    "# print(env.specification.action)"
+    "# print(env.specification.configuration)\n",
+    "print(env.specification.action['enum'])"
    ]
   },
   {
